# deepfry

./: .buildinfo  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/actions/poetry/: action.yaml  script.ps1
.github/workflows/: build-docs.yaml  check-docs.yaml  docs.yaml  format.yaml  lint.yaml  publish-docs.yaml  test.yaml
_sources/: index.rst.txt
docs/source/: conf.py  index.rst
tests/: test_deepfry.py
