[tool.poetry]
name = "deepfry"
version = "0.1.0"
license = "MIT"
description = "Deep fry images in python or from the command line"
authors = ["mrlegohead0x45 <mrlegohead0x45@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.1.0"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.942"
isort = "^5.10.1"
Sphinx = "^4.5.0"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
